--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.config.import=optional:application-environment.properties
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.url=jdbc:postgresql://talk-and-travel-database.cs7mnguqy2zm.us-east-1.rds.amazonaws.com:5432/postgres
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
