Htde URL in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.config.import=optional:application-environment.properties
+server.port=5000
 
-spring.datasource.url=jdbc:postgresql://talk-and-travel-database.cs7mnguqy2zm.us-east-1.rds.amazonaws.com:5432/postgres
+spring.datasource.url=${URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
