--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <groupId>com.gmail.smaglenko</groupId>
     <artifactId>talk-and-travel</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>talk-and-travel</name>
     <description>talk-and-travel</description>
     <properties>
