--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      java: corretto-17
+      java: openjdk-17
   pre_build:
     commands:
       - mvn clean
