--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,14 +1,14 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      java: corretto17
-  pre_build:
-    commands:
-      - mvn clean
   build:
     commands:
-      - mvn package
+      - echo Building...
+      - mvn clean package
+  post_build:
+    commands:
+      - mvn Build completed successfully!
 artifacts:
-  files: target/*.jar
+  files:
+    - target/talk-and-travel-app.jar
+  discard-paths: yes
