add pre_build to buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,11 @@
 version: 0.2
 
 phases:
+  pre_build:
+    commands:
+      - echo Installing Java 17...
+      - yum install java-17-amazon-corretto-devel -y
+      - alternatives --set java /usr/lib/jvm/java-17-amazon-corretto.aarch64/bin/java
   build:
     commands:
       - echo Building...
