Create for Country: create, getAll, update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.show-sql=true
 
 server.tomcat.accesslog.enabled=true
 
-spring.servlet.multipart.max-file-size=4MB
+spring.servlet.multipart.max-file-size=${MAX_AVATAR_SIZE}
